--- a/src/client/components/app/app.scss
+++ b/src/client/components/app/app.scss
@@ -1,6 +1,24 @@
+@font-face {
+  font-family: 'Open Sans';
+  src: url('./OpenSans-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('./OpenSans-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
+
+$font-opensans: 'Open Sans', sans-serif;
+
 body {
   margin: 0;
   padding: 0;
+  font-family: $font-opensans;
+  font-size: 13px;
 }
 
 .app {
