add keyboard navigation

--- a/src/client/components/shelf/shelf.scss
+++ b/src/client/components/shelf/shelf.scss
@@ -3,6 +3,10 @@
   width: 100%;
   cursor: pointer;
 
+  &:focus {
+    outline: none;
+  }
+
   &__row {
     &--active {
       background: #7373af;
