small improvements to the shelf component

--- a/src/client/components/shelf/shelf.scss
+++ b/src/client/components/shelf/shelf.scss
@@ -1,7 +1,10 @@
 .shelf {
-  border-collapse: collapse;
-  width: 100%;
   cursor: pointer;
+
+  &__table {
+    border-collapse: collapse;
+    width: 100%;
+  }
 
   &:focus {
     outline: none;
